# binja-debugger-rust

./: .envrc  Cargo.toml  README.md  TODO.md  build.rs
examples/: headless_debug.rs  vtable_plugin.rs  vtable_utils.rs
examples/headless_debug/: macros.rs  main.rs  utils.rs
src/: ffi.rs  lib.rs  vtable_render_layer.rs
test/: test_vtable.sh  traits.bndb.vtable.bndb
test_target/: dyn_dispatch  dyn_dispatch.rs
