[package]
name = "binja-debugger"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Binary Ninja Debugger"
license = "Apache-2.0"

[dependencies]
binaryninja = { path = "../binja-api/rust" }
binaryninjacore-sys = { path = "../binja-api/rust/binaryninjacore-sys" }
env_logger = "0.11.8"
trace-time = "0.1.3"

[build-dependencies]

[[example]]
name = "headless_debug"
path = "examples/headless_debug.rs"
